# docker_c_plus_plus_github_action_example

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build_deploy.yaml
src/: main.cpp
tests/: test_main.cpp
